Implement binarySearch function

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     },
     "autoload": {
         "files": [
-            "./src/recursion.php"
+            "./src/recursion.php",
+            "./src/binarySearch.php"
         ]
     }
 }
