--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "files": [
             "./src/recursion.php",
             "./src/binarySearch.php",
-            "./src/selectionSort.php"
+            "./src/selectionSort.php",
+            "./src/quickSort.php"
         ]
     }
 }
