--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "penzin.r.v@gmail.com"
         }
     ],
+    "license": "Apache-2.0",
     "require": {
         "phpunit/phpunit": "^9.0"
     },
