--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "license": "Apache-2.0",
-    "require": {
+    "require-dev": {
         "phpunit/phpunit": "^9.0"
     },
     "autoload": {
