Several minor improvements not related to logic

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "penzin/algorithms-practice",
-    "description": "My practice with different algorithms, why not?",
+    "description": "My practice with different algorithms",
     "authors": [
         {
-            "name": "Roman V. Penzin",
+            "name": "Roman Penzin",
             "email": "penzin.r.v@gmail.com"
         }
     ],
